[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Bacon <baconator@users.noreply.github.com>"]

[dependencies]
"regex" = "1.1.0"
"libc" = "0.2.44"
"itertools" = "0.6.5"

[features]
default = []
day1 = []
day2 = []
day3 = []
day4 = []

[build-dependencies]
cbindgen = "0.6.7"

[lib]
name = "aoc2018"
